--- a/megaBlog/.env.sample
+++ b/megaBlog/.env.sample
@@ -3,3 +3,4 @@ VITE_APPWRITE_PROJECT_ID="696c88ab001ee9dbb197"
 VITE_APPWRITE_DATABASE_ID="696c896d0018e778c1c4"
 VITE_APPWRITE_BUCKET_ID="696c8b7f0004f70451b7"
 VITE_APPWRITE_COLLECTION_ID="articles_" 
+VITE_TINYMCE_API_KEY="q9xom2tb63moev0ojizo7vd0pll4vt1inpjli78xi89512wy"
